--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -18,7 +18,7 @@ Easy To Take Course Money Back Guarantee
 
 {% block content %}
 
-<section class="page-header">
+<section class="page-header" data-time='{% now "SHORT_DATETIME_FORMAT" %}'>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8">
