--- a/app_students/templates/student_base.html
+++ b/app_students/templates/student_base.html
@@ -26,9 +26,8 @@
         <!-- bootstrap.min css -->
         <link
         rel="stylesheet" href="{% static 'edutim/vendors/bootstrap/bootstrap.css' %}"> <!-- Iconfont Css -->
-        <link
-        rel="stylesheet" href="{% static 'edutim/vendors/fontawesome/css/all.css' %}">
-
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+      
         <!-- animate.css -->
         <link
         rel="stylesheet" href="{% static 'edutim/vendors/animate-css/animate.css' %}">
