--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -18,7 +18,7 @@ Easy To Take Course Money Back Guarantee
 
 {% block content %}
 
-<section class="page-header" data-time='{% now "SHORT_DATETIME_FORMAT" %}'>
+<section class="page-header lazy" data-src="{% static 'edutim/images/bg/page-header.jpg' %}" data-time='{% now "SHORT_DATETIME_FORMAT" %}'>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8">
@@ -262,7 +262,6 @@ Easy To Take Course Money Back Guarantee
 <style>
 
 
-
 .sp-badge {
 
     position: relative;
@@ -320,6 +319,12 @@ Easy To Take Course Money Back Guarantee
 </style>
 
 <script>
+
+    $(function() {
+        $('section.lazy').lazy({
+        });
+    });
+
     $(document).ready(function () {
         $("#ddlCategory").change(function () {
             var val = $(this).val();
