--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -2,6 +2,7 @@
 {% load staticfiles %}
 {% load course_tags %}
 
+
 {% block title %}
 {% if subject %} Best {{ subject.title }} Courses Online | pdhsafety.com {%else%}
 Best Accredit Safety Training Courses Online | pdhsafety.com
@@ -10,8 +11,8 @@ Best Accredit Safety Training Courses Online | pdhsafety.com
 
 {% block meta_desc %}
 {% if subject %} Best Price Online {{ subject.title }}
-IACET Accredited, Access 24/7 On All Devices.
-Easy To Take Course Money Back Guarantee 
+OSHA Compliant  (Easy Access 24/7 On All Devices)
+Easy To Take Course Satisfaction Guarantee
 
 {% endif %}
 {% endblock %}
