credit card enabled

--- a/app_cart/templates/checkout.html
+++ b/app_cart/templates/checkout.html
@@ -151,7 +151,7 @@
                 var setPaypal = function () {
                     paypal.Buttons({
                         funding: {
-                            disallowed: [paypal.FUNDING.CREDIT]
+                           // disallowed: [paypal.FUNDING.CREDIT]
                         },
                         style: {
                             label: 'checkout'
