--- a/app_cart/templates/package_cart.html
+++ b/app_cart/templates/package_cart.html
@@ -224,7 +224,7 @@
 
                     paypal.Buttons({
                         funding: {
-                            disallowed: [paypal.FUNDING.CREDIT]
+                           // disallowed: [paypal.FUNDING.CREDIT]
                         },
                         style: {
                             label: 'checkout'
