added link in mail template

--- a/app_cart/templates/_mail_order_confirm.html
+++ b/app_cart/templates/_mail_order_confirm.html
@@ -112,7 +112,7 @@
                                           </p>
                                           <p style="font-size: 14px">
                                             You can view the invoice details with following link
-                                            <a href="/order/{{ref}}" target="_blank"> View Invoice</a>
+                                            <a href="https://pdhsafety.com/order/{{ref}}" target="_blank"> View Invoice</a>
                                           </p>
                                        </td>
                                     </tr>
