--- a/app_cart/templates/order.html
+++ b/app_cart/templates/order.html
@@ -105,6 +105,15 @@
 
 
 {% endblock %} {% block scripts %} {% verbatim %}
+
+<style>
+    @media print {
+        header, .footer {
+          display:none;
+        }
+        /* ... the rest of the rules ... */
+      }
+</style>
 <script type="text/x-handlebars-template" id='cartItemTemplate'>
     <tr>
         <td>{{number}}</td>
@@ -115,6 +124,8 @@
 
 </script>
 {% endverbatim %}
+
+
 <script>
     (function($) {
 
