hide button on print invoice

--- a/app_cart/templates/order.html
+++ b/app_cart/templates/order.html
@@ -108,7 +108,7 @@
 
 <style>
     @media print {
-        header, .footer {
+        header, .footer, #btnPrint {
           display:none;
         }
         /* ... the rest of the rules ... */
