working on student order

--- a/app_students/templates/student_base.html
+++ b/app_students/templates/student_base.html
@@ -81,11 +81,19 @@
                                         Quizzes
                                     </a>
                                 </li>
+
+                                <li class="nav-item d-none">
+                                    <a class="nav-link" href="{% url 'student_edit_profile' %}">
+                                       Orders
+                                    </a>
+                                </li>
+                                
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'student_messages' %}">
                                         Inbox
                                     </a>
                                 </li>
+
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'student_edit_profile' %}">
                                        Edit Profile
