testing subject page

--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -22,6 +22,9 @@
       <link rel="icon" type="image/png" href="{% static 'edutim/images/logo100.png' %}" />
       <link rel="canonical" href="https://pdhsafety.com{{ request.path }}" />
 
+      <link href="https://www.googletagmanager.com/gtag/js?id=UA-190250545-1" rel="preload" as="script">
+      <link href="https://www.googletagmanager.com/gtag/js?id=G-NKBKFHN4MT" rel="preload" as="script">
+
       <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 
       <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="{% static 'edutim/combine.css' %}" />
@@ -51,6 +54,7 @@
          gtag("config", "UA-190250545-1");
       </script>
 
+      
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-NKBKFHN4MT"></script>
       <script>
          window.dataLayer = window.dataLayer || [];
