fixing height for images

--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -125,7 +125,7 @@
             <nav class="navbar navbar-expand-lg">
                <div class="container justify-content-center">
                   <a class="navbar-brand" href="/" aria-label="Home">
-                     <img src="{% static 'edutim/images/logo100.png' %}" width="100" alt="Make Safety Training Happen" class="img-fluid" />
+                     <img src="{% static 'edutim/images/logo100.png' %}" width="100" height="100" alt="Make Safety Training Happen" class="img-fluid" />
                   </a>
 
                   <h3>Make Safety Training Happen</h3>
@@ -223,7 +223,7 @@
                               class="search-close"
                               src="{% static 'edutim/images/close.png' %}"
                               srcset="% static 'edutim/images/close@2x.png 2x' %}"
-                              alt=""
+                              alt="" width="39" height="39"
                            />
                         </div>
                      </div>
@@ -353,7 +353,7 @@
                <div class="row justify-content-center align-items-center">
                   <div class="col-lg-2">
                      <div class="footer-logo">
-                        <img data-src="{% static 'edutim/images/logo100.png' %}" width="100" alt="NYC Construction Safety Training, LLC" class="lazy img-fluid" />
+                        <img data-src="{% static 'edutim/images/logo100.png' %}" width="100" height="100" alt="NYC Construction Safety Training, LLC" class="lazy img-fluid" />
                      </div>
                   </div>
                   <div class="col-lg-10">
