--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -10,8 +10,7 @@
       <meta
          name="description"
          content="{% block meta_desc %} 100% Online Best Prices-Money Back Guarantee-Live Access-IACET Accredited-Access 24/7 On All Devices
-
-  {% endblock %}"
+{% endblock %}"
       />
       <meta name="author" content="{% block meta_author %}{% endblock %}" />
       <meta name="keywords" content="{% block meta_keywords %}{% endblock %}" />
@@ -22,6 +21,7 @@
       <link rel="icon" type="image/png" href="{% static 'edutim/images/logo100.png' %}" />
       <link rel="canonical" href="https://pdhsafety.com{{ request.path }}" />
 
+      <link rel="dns-prefetch" href="https://www.googletagmanager.com/" >
       <link href="https://www.googletagmanager.com/gtag/js?id=UA-190250545-1" rel="preload" as="script">
       <link href="https://www.googletagmanager.com/gtag/js?id=G-NKBKFHN4MT" rel="preload" as="script">
 
